put solana-transaction-error behind feature "full"

--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -33,6 +33,7 @@ full = [
     "libsecp256k1",
     "sha3",
     "digest",
+    "dep:solana-transaction-error"
 ]
 borsh = ["dep:borsh", "solana-program/borsh", "solana-secp256k1-recover/borsh"]
 dev-context-only-utils = ["qualifier_attr"]
@@ -43,7 +44,7 @@ frozen-abi = [
     "solana-feature-set/frozen-abi",
     "solana-program/frozen-abi",
     "solana-short-vec/frozen-abi",
-    "solana-signature/frozen-abi"
+    "solana-signature/frozen-abi",
     "solana-transaction-error/frozen-abi"
 ]
 
@@ -104,7 +105,7 @@ solana-signature = { workspace = true, features = [
     "std",
     "verify",
 ], optional = true }
-solana-transaction-error = { workspace = true, features = ["serde"] }
+solana-transaction-error = { workspace = true, features = ["serde"], optional = true }
 thiserror = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
