make solana-hash no_std by default

--- a/sdk/hash/Cargo.toml
+++ b/sdk/hash/Cargo.toml
@@ -32,7 +32,8 @@ wasm-bindgen = { workspace = true }
 rustc_version = { workspace = true }
 
 [features]
-borsh = ["dep:borsh"]
+borsh = ["dep:borsh", "std"]
 bytemuck = ["dep:bytemuck", "dep:bytemuck_derive"]
-frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
+frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro", "std"]
 serde = ["dep:serde", "dep:serde_derive"]
+std = []
