--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -36,6 +36,7 @@ solana-decode-error = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true }
 solana-frozen-abi-macro = { workspace = true, optional = true }
 solana-msg = { workspace = true }
+solana-program-error = { workspace = true }
 solana-program-memory = { workspace = true }
 solana-sanitize = { workspace = true }
 solana-sdk-macro = { workspace = true }
