--- a/sdk/hasher/Cargo.toml
+++ b/sdk/hasher/Cargo.toml
@@ -13,11 +13,17 @@ edition = { workspace = true }
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-sha2 = { workspace = true }
 solana-hash = { workspace = true }
 
+[target.'cfg(not(target_os = "solana"))'.dependencies]
+sha2 = { workspace = true }
+
 [target.'cfg(target_os = "solana")'.dependencies]
+sha2 = { workspace = true, optional = true }
 solana-define-syscall = { workspace = true }
+
+[features]
+sha2 = ["dep:sha2"]
 
 [dev-dependencies]
 bs58 = { workspace = true }
