--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -37,7 +37,7 @@ solana-decode-error = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true, features = ["frozen-abi"] }
 solana-frozen-abi-macro = { workspace = true, optional = true, features = ["frozen-abi"] }
 solana-hash = { workspace = true, features = ["bytemuck", "serde", "std"] }
-solana-hasher = { workspace = true }
+solana-hasher = { workspace = true, features = ["sha2"] }
 solana-msg = { workspace = true }
 solana-program-memory = { workspace = true }
 solana-sanitize = { workspace = true }
