--- a/sdk/pubkey/Cargo.toml
+++ b/sdk/pubkey/Cargo.toml
@@ -23,13 +23,16 @@ serde_derive = { workspace = true }
 solana-atomic-u64 = { workspace = true }
 solana-decode-error = { workspace = true }
 solana-define-syscall = { workspace = true }
-solana-hasher = { workspace = true }
 solana-sanitize = { workspace = true }
 thiserror = { workspace = true }
+
+[target.'cfg(target_os = "solana")'.dependencies]
+solana-hasher = { workspace = true }
 
 [target.'cfg(not(target_os = "solana"))'.dependencies]
 curve25519-dalek = { workspace = true, optional = true }
 rand = { workspace = true }
+solana-hasher = { workspace = true, optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { workspace = true }
@@ -42,9 +45,9 @@ solana-pubkey = { path = ".", features = ["borsh", "curve25519"] }
 
 [features]
 borsh = ["dep:borsh", "dep:borsh0-10"]
-curve25519 = ["dep:curve25519-dalek"]
+curve25519 = ["dep:curve25519-dalek", "sha2"]
 dev-context-only-utils = ["dep:arbitrary"]
-# sha256 = ["dep:solana-hasher"]
+sha2 = ["dep:solana-hasher", "solana-hasher/sha2"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
