make serde optional in solana-pubkey

--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -44,7 +44,7 @@ solana-hash = { workspace = true, features = [
 solana-msg = { workspace = true }
 solana-program-memory = { workspace = true }
 solana-program-option = { workspace = true }
-solana-pubkey = { workspace = true, features = ["curve25519"] }
+solana-pubkey = { workspace = true, features = ["curve25519", "serde"] }
 solana-sanitize = { workspace = true }
 solana-sdk-macro = { workspace = true }
 solana-secp256k1-recover = { workspace = true }
