--- a/sdk/pubkey/Cargo.toml
+++ b/sdk/pubkey/Cargo.toml
@@ -14,8 +14,8 @@ arbitrary = { workspace = true, features = ["derive"], optional = true }
 borsh = { workspace = true, optional = true }
 borsh0-10 = { package = "borsh", version = "0.10.3", optional = true }
 bs58 = { workspace = true }
-bytemuck = { workspace = true }
-bytemuck_derive = { workspace = true }
+bytemuck = { workspace = true, optional = true }
+bytemuck_derive = { workspace = true, optional = true }
 num-derive = { workspace = true }
 num-traits = { workspace = true }
 serde = { workspace = true, optional = true }
@@ -47,6 +47,7 @@ solana-pubkey = { path = ".", features = ["borsh", "curve25519"] }
 
 [features]
 borsh = ["dep:borsh", "dep:borsh0-10"]
+bytemuck = ["dep:bytemuck", "dep:bytemuck_derive"]
 curve25519 = ["dep:curve25519-dalek", "sha2"]
 dev-context-only-utils = ["dep:arbitrary"]
 serde = ["dep:serde", "dep:serde_derive"]
