--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -114,6 +114,7 @@ frozen-abi = [
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
     "solana-hash/frozen-abi",
+    "solana-pubkey/frozen-abi",
     "solana-short-vec/frozen-abi"
 ]
 
