--- a/sdk/pubkey/Cargo.toml
+++ b/sdk/pubkey/Cargo.toml
@@ -42,7 +42,7 @@ wasm-bindgen = { workspace = true }
 anyhow = { workspace = true }
 arbitrary = { workspace = true, features = ["derive"] }
 rand = { workspace = true }
-solana-pubkey = { path = ".", features = ["borsh", "curve25519", "std"] }
+solana-pubkey = { path = ".", features = ["borsh", "curve25519", "dev-context-only-utils", "std"] }
 
 [build-dependencies]
 rustc_version = { workspace = true }
