make bincode optional in solana-instruction

--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -41,7 +41,7 @@ solana-hash = { workspace = true, features = [
     "serde",
     "std",
 ] }
-solana-instruction = { workspace = true }
+solana-instruction = { workspace = true, default-features = false, features = ["bincode"] }
 solana-msg = { workspace = true }
 solana-program-memory = { workspace = true }
 solana-program-option = { workspace = true }
