--- a/sdk/instruction/Cargo.toml
+++ b/sdk/instruction/Cargo.toml
@@ -10,7 +10,7 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-bincode = { workspace = true }
+bincode = { workspace = true, optional = true }
 borsh = { workspace = true, optional = true }
 num-traits = { workspace = true }
 serde = { workspace = true }
@@ -35,6 +35,7 @@ wasm-bindgen = { workspace = true }
 rustc_version = { workspace = true }
 
 [features]
+bincode = ["dep:bincode"]
 borsh = ["dep:borsh"]
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
 
