--- a/sdk/instruction/Cargo.toml
+++ b/sdk/instruction/Cargo.toml
@@ -13,15 +13,15 @@ edition = { workspace = true }
 bincode = { workspace = true, optional = true }
 borsh = { workspace = true, optional = true }
 num-traits = { workspace = true }
-serde = { workspace = true }
-serde_derive = { workspace = true }
+serde = { workspace = true, optional = true }
+serde_derive = { workspace = true, optional = true }
 solana-frozen-abi = { workspace = true, optional = true }
 solana-frozen-abi-macro = { workspace = true, optional = true }
 solana-pubkey = { workspace = true, default-features = false, features = [
     "serde",
 ] }
 solana-sanitize = { workspace = true }
-solana-short-vec = { workspace = true }
+solana-short-vec = { workspace = true, optional = true }
 
 [target.'cfg(target_os = "solana")'.dependencies]
 solana-define-syscall = { workspace = true }
@@ -35,9 +35,10 @@ wasm-bindgen = { workspace = true }
 rustc_version = { workspace = true }
 
 [features]
-bincode = ["dep:bincode"]
+bincode = ["dep:bincode", "dep:serde"]
 borsh = ["dep:borsh"]
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
+serde = ["dep:serde", "dep:serde_derive", "dep:solana-short-vec"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
