--- a/sdk/instruction/Cargo.toml
+++ b/sdk/instruction/Cargo.toml
@@ -17,9 +17,7 @@ serde = { workspace = true, optional = true }
 serde_derive = { workspace = true, optional = true }
 solana-frozen-abi = { workspace = true, optional = true }
 solana-frozen-abi-macro = { workspace = true, optional = true }
-solana-pubkey = { workspace = true, default-features = false, features = [
-    "serde",
-] }
+solana-pubkey = { workspace = true, default-features = false }
 solana-sanitize = { workspace = true }
 solana-short-vec = { workspace = true, optional = true }
 
@@ -42,7 +40,7 @@ bincode = ["dep:bincode", "dep:serde"]
 borsh = ["dep:borsh"]
 dev-context-only-utils = [] # unused but CI fails without this.
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
-serde = ["dep:serde", "dep:serde_derive", "dep:solana-short-vec"]
+serde = ["dep:serde", "dep:serde_derive", "dep:solana-short-vec", "solana-pubkey/serde"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
