--- a/sdk/instruction/Cargo.toml
+++ b/sdk/instruction/Cargo.toml
@@ -30,7 +30,10 @@ js-sys = { workspace = true }
 wasm-bindgen = { workspace = true }
 
 [dev-dependencies]
-solana-instruction = { path = ".", features = ["borsh", "dev-context-only-utils"] }
+solana-instruction = { path = ".", features = [
+    "borsh",
+    "dev-context-only-utils",
+] }
 
 [build-dependencies]
 rustc_version = { workspace = true }
@@ -40,7 +43,12 @@ bincode = ["dep:bincode", "dep:serde"]
 borsh = ["dep:borsh"]
 dev-context-only-utils = [] # unused but CI fails without this.
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
-serde = ["dep:serde", "dep:serde_derive", "dep:solana-short-vec", "solana-pubkey/serde"]
+serde = [
+    "dep:serde",
+    "dep:serde_derive",
+    "dep:solana-short-vec",
+    "solana-pubkey/serde",
+]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
