--- a/sdk/program-error/Cargo.toml
+++ b/sdk/program-error/Cargo.toml
@@ -10,7 +10,7 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-borsh = { workspace = true, default-features = false, optional = true }
+borsh = { workspace = true, optional = true }
 num-traits = { workspace = true }
 serde = { workspace = true }
 serde_derive = { workspace = true }
