make serde optional in program-error crate

--- a/sdk/program-error/Cargo.toml
+++ b/sdk/program-error/Cargo.toml
@@ -12,8 +12,8 @@ edition = { workspace = true }
 [dependencies]
 borsh = { workspace = true, optional = true }
 num-traits = { workspace = true }
-serde = { workspace = true }
-serde_derive = { workspace = true }
+serde = { workspace = true, optional = true }
+serde_derive = { workspace = true, optional = true }
 solana-decode-error = { workspace = true }
 solana-instruction = { workspace = true, default-features = false }
 solana-msg = { workspace = true }
@@ -22,6 +22,7 @@ thiserror = { workspace = true }
 
 [features]
 borsh = ["dep:borsh"]
+serde = ["dep:serde", "dep:serde_derive"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
