--- a/sdk/clock/Cargo.toml
+++ b/sdk/clock/Cargo.toml
@@ -10,12 +10,15 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-serde = { workspace = true }
-serde_derive = { workspace = true }
+serde = { workspace = true, optional = true }
+serde_derive = { workspace = true, optional = true }
 solana-sdk-macro = { workspace = true }
 
 [dev-dependencies]
 static_assertions = { workspace = true }
+
+[features]
+serde = ["dep:serde", "dep:serde_derive"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
