--- a/sdk/account-info/Cargo.toml
+++ b/sdk/account-info/Cargo.toml
@@ -10,8 +10,8 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-bincode = { workspace = true }
-serde = { workspace = true }
+bincode = { workspace = true, optional = true }
+serde = { workspace = true, optional = true }
 solana-program-error = { workspace = true }
 solana-program-memory = { workspace = true }
 solana-pubkey = { workspace = true, default-features = false }
@@ -19,6 +19,9 @@ solana-pubkey = { workspace = true, default-features = false }
 [dev-dependencies]
 solana-program = { workspace = true }
 static_assertions = { workspace = true }
+
+[features]
+bincode = ["dep:bincode", "dep:serde"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
