--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -37,6 +37,7 @@ solana-atomic-u64 = { workspace = true }
 solana-bincode = { workspace = true }
 solana-clock = { workspace = true, features = ["serde"] }
 solana-decode-error = { workspace = true }
+solana-entrypoint = { workspace = true }
 solana-epoch-schedule = { workspace = true, features = ["serde"] }
 solana-frozen-abi = { workspace = true, optional = true, features = ["frozen-abi"] }
 solana-frozen-abi-macro = { workspace = true, optional = true, features = ["frozen-abi"] }
