--- a/sdk/program-lite/Cargo.toml
+++ b/sdk/program-lite/Cargo.toml
@@ -41,6 +41,7 @@ thiserror = { workspace = true }
 [target.'cfg(target_os = "solana")'.dependencies]
 getrandom = { workspace = true, features = ["custom"] }
 solana-define-syscall = { workspace = true }
+solana-secp256k1-recover = { workspace = true }
 
 [target.'cfg(not(target_os = "solana"))'.dependencies]
 base64 = { workspace = true, features = ["alloc", "std"] }
