--- a/sdk/macro/Cargo.toml
+++ b/sdk/macro/Cargo.toml
@@ -14,9 +14,9 @@ proc-macro = true
 
 [dependencies]
 bs58 = { workspace = true }
-proc-macro2 = { workspace = true }
-quote = { workspace = true }
-syn = { workspace = true, features = ["full"] }
+proc-macro2 = { workspace = true, default-features = false }
+quote = { workspace = true, default-features = false }
+syn = { workspace = true, default-features = false }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
