--- a/sdk/program-core/Cargo.toml
+++ b/sdk/program-core/Cargo.toml
@@ -55,7 +55,7 @@ solana-define-syscall = { workspace = true }
 arbitrary = { workspace = true, features = ["derive"], optional = true }
 base64 = { workspace = true, features = ["alloc", "std"] }
 bitflags = { workspace = true }
-curve25519-dalek = { workspace = true }
+curve25519-dalek = { workspace = true, optional = true }
 rand = { workspace = true }
 
 [target.'cfg(not(target_os = "solana"))'.dev-dependencies]
@@ -74,6 +74,7 @@ anyhow = { workspace = true }
 itertools = { workspace = true }
 serde_json = { workspace = true }
 serial_test = { workspace = true }
+solana-program-core = { path = ".", features = ["dev-context-only-utils"] }
 static_assertions = { workspace = true }
 
 [build-dependencies]
@@ -88,7 +89,8 @@ crate-type = ["cdylib", "rlib"]
 [features]
 default = ["borsh"]
 borsh = ["dep:borsh", "dep:borsh0-10"]
-dev-context-only-utils = ["dep:arbitrary", "dep:qualifier_attr"]
+curve25519 = ["dep:curve25519-dalek"]
+dev-context-only-utils = ["dep:arbitrary", "dep:qualifier_attr", "curve25519"]
 frozen-abi = [
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
