--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -32,7 +32,7 @@ solana-decode-error = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true }
 solana-frozen-abi-macro = { workspace = true, optional = true }
 solana-msg = { workspace = true }
-solana-program-core = { workspace = true }
+solana-program-core = { workspace = true, features = ["curve25519"] }
 solana-program-memory = { workspace = true }
 solana-sanitize = { workspace = true }
 solana-sdk-macro = { workspace = true }
