--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -37,7 +37,8 @@ solana-program-core = { workspace = true, features = [
     "bytemuck",
     "curve25519",
     "serde",
-    "sha2"
+    "sha2",
+    "sha3",
 ] }
 solana-program-memory = { workspace = true }
 solana-sanitize = { workspace = true }
