--- a/Cargo.toml
+++ b/Cargo.toml
@@ -227,6 +227,7 @@ env_logger = "0.9.3"
 etcd-client = "0.11.1"
 fast-math = "0.1"
 fd-lock = "3.0.13"
+five8_const = "0.1.3"
 flate2 = "1.0.30"
 fnv = "1.0.7"
 fs_extra = "1.3.0"
