--- a/sdk/program-core/Cargo.toml
+++ b/sdk/program-core/Cargo.toml
@@ -16,7 +16,7 @@ blake3 = { workspace = true, features = ["digest", "traits-preview"] }
 borsh = { workspace = true, optional = true }
 borsh0-10 = { package = "borsh", version = "0.10.3", optional = true }
 bs58 = { workspace = true }
-bv = { workspace = true }
+bv = { workspace = true, optional = true }
 bytemuck = { workspace = true, optional = true }
 bytemuck_derive = { workspace = true, optional = true }
 five8_const = { workspace = true }
@@ -88,6 +88,7 @@ crate-type = ["cdylib", "rlib"]
 base64 = ["dep:base64"]
 bincode = ["dep:bincode", "serde"]
 borsh = ["dep:borsh", "dep:borsh0-10", "dep:getrandom"]
+bv = ["dep:bv"]
 bytemuck = ["dep:bytemuck", "dep:bytemuck_derive"]
 curve25519 = ["dep:curve25519-dalek"]
 dev-context-only-utils = [
@@ -96,6 +97,7 @@ dev-context-only-utils = [
     "base64",
     "bincode",
     "borsh",
+    "bv",
     "bytemuck",
     "curve25519",
     "serde",
