--- a/sdk/decode-error/Cargo.toml
+++ b/sdk/decode-error/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "solana-decode-error"
-description = "Solana DecodeError Trait"
+description = "Solana DecodeError Trait. Obsolete."
 documentation = "https://docs.rs/solana-decode-error"
 version = { workspace = true }
 authors = { workspace = true }
@@ -8,9 +8,3 @@ repository = { workspace = true }
 homepage = { workspace = true }
 license = { workspace = true }
 edition = { workspace = true }
-
-[dependencies]
-num-traits = { workspace = true }
-
-[dev-dependencies]
-num-derive = { workspace = true }
