--- a/sdk/program-memory/Cargo.toml
+++ b/sdk/program-memory/Cargo.toml
@@ -10,10 +10,13 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-num-traits = { workspace = true }
+num-traits = { workspace = true, optional = true }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
 [target.'cfg(target_os = "solana")'.dependencies]
 solana-define-syscall = { workspace = true }
+
+[features]
+num-traits = ["dep:num-traits"]
