--- a/frozen-abi/macro/Cargo.toml
+++ b/frozen-abi/macro/Cargo.toml
@@ -15,7 +15,7 @@ proc-macro = true
 [dependencies]
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
-syn = { workspace = true, features = ["full", "extra-traits", "parsing", "printing", "proc-macro"] }
+syn = { workspace = true, default-features = true, features = ["clone-impls", "full", "extra-traits"] }
 
 [build-dependencies]
 rustc_version = { workspace = true }
