--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -40,6 +40,7 @@ frozen-abi = [
     "dep:rustc_version",
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
+    "solana-feature-set/frozen-abi",
     "solana-program/frozen-abi",
     "solana-short-vec/frozen-abi",
     "solana-signature/frozen-abi"
