get svm tests compiling on wasm32

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -595,3 +595,7 @@ rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
 [patch.crates-io.tokio]
 git = "https://github.com/anza-xyz/solana-tokio.git"
 rev = "7cf47705faacf7bf0e43e4131a5377b3291fce21"
+
+[profile.dev]
+opt-level = 1
+incremental = true
