--- a/sdk/clock/Cargo.toml
+++ b/sdk/clock/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "solana-clock"
 description = "Solana Clock and Time Definitions"
-documentation = "https://docs.rs/solana-sanitize"
+documentation = "https://docs.rs/solana-clock"
 version = { workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
