add comment about sha2 removal

--- a/sdk/hasher/Cargo.toml
+++ b/sdk/hasher/Cargo.toml
@@ -19,6 +19,9 @@ solana-hash = { workspace = true }
 sha2 = { workspace = true }
 
 [target.'cfg(target_os = "solana")'.dependencies]
+# sha2 should be removed in the next breaking release,
+# as there's no reason to use the crate instead of the syscall
+# onchain
 sha2 = { workspace = true, optional = true }
 solana-define-syscall = { workspace = true }
 
