put Hash::new_unique behind #[cfg(feature = "dev-context-only-utils")]

--- a/sdk/hash/Cargo.toml
+++ b/sdk/hash/Cargo.toml
@@ -35,6 +35,7 @@ rustc_version = { workspace = true, optional = true }
 borsh = ["dep:borsh", "std"]
 bytemuck = ["dep:bytemuck", "dep:bytemuck_derive"]
 default = ["std"]
+dev-context-only-utils = []
 frozen-abi = [
     "dep:rustc_version",
     "dep:solana-frozen-abi",
