--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -36,7 +36,12 @@ solana-clock = { workspace = true, features = ["serde"] }
 solana-decode-error = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true, features = ["frozen-abi"] }
 solana-frozen-abi-macro = { workspace = true, optional = true, features = ["frozen-abi"] }
-solana-hash = { workspace = true, features = ["bytemuck", "serde", "std"] }
+solana-hash = { workspace = true, features = [
+    "bytemuck",
+    "dev-context-only-utils",
+    "serde",
+    "std",
+] }
 solana-hasher = { workspace = true, features = ["sha2"] }
 solana-msg = { workspace = true }
 solana-program-memory = { workspace = true }
