--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,13 +107,13 @@ members = [
     "sdk/decode-error",
     "sdk/gen-headers",
     "sdk/hash",
-    "sdk/hasher",
     "sdk/macro",
     "sdk/msg",
     "sdk/package-metadata-macro",
     "sdk/program",
     "sdk/program-memory",
     "sdk/serde-varint",
+    "sdk/sha256-hasher",
     "send-transaction-service",
     "short-vec",
     "stake-accounts",
@@ -393,7 +393,6 @@ agave-geyser-plugin-interface = { path = "geyser-plugin-interface", version = "=
 solana-geyser-plugin-manager = { path = "geyser-plugin-manager", version = "=2.1.0" }
 solana-gossip = { path = "gossip", version = "=2.1.0" }
 solana-hash = { path = "sdk/hash", version = "=2.1.0" }
-solana-hasher = { path = "sdk/hasher", version = "=2.1.0" }
 solana-inline-spl = { path = "inline-spl", version = "=2.1.0" }
 solana-lattice-hash = { path = "lattice-hash", version = "=2.1.0" }
 solana-ledger = { path = "ledger", version = "=2.1.0" }
@@ -422,6 +421,7 @@ solana-rayon-threadlimit = { path = "rayon-threadlimit", version = "=2.1.0" }
 solana-remote-wallet = { path = "remote-wallet", version = "=2.1.0", default-features = false }
 solana-sanitize = { path = "sanitize", version = "=2.1.0" }
 solana-serde-varint = { path = "sdk/serde-varint", version = "=2.1.0" }
+solana-sha256-hasher = { path = "sdk/sha256-hasher", version = "=2.1.0" }
 solana-timings = { path = "timings", version = "=2.1.0" }
 solana-unified-scheduler-logic = { path = "unified-scheduler-logic", version = "=2.1.0" }
 solana-unified-scheduler-pool = { path = "unified-scheduler-pool", version = "=2.1.0" }
