--- a/sdk/hash/Cargo.toml
+++ b/sdk/hash/Cargo.toml
@@ -14,7 +14,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 borsh = { workspace = true, optional = true }
-bs58 = { workspace = true }
+bs58 = { workspace = true, default-features = false }
 bytemuck = { workspace = true, optional = true }
 bytemuck_derive = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
