--- a/sdk/pubkey/Cargo.toml
+++ b/sdk/pubkey/Cargo.toml
@@ -27,11 +27,11 @@ solana-sanitize = { workspace = true }
 
 [target.'cfg(target_os = "solana")'.dependencies]
 solana-define-syscall = { workspace = true }
-solana-hasher = { workspace = true }
+solana-sha256-hasher = { workspace = true }
 
 [target.'cfg(not(target_os = "solana"))'.dependencies]
 curve25519-dalek = { workspace = true, optional = true }
-solana-hasher = { workspace = true, optional = true }
+solana-sha256-hasher = { workspace = true, optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { workspace = true, features = ["js", "wasm-bindgen"] }
@@ -60,7 +60,7 @@ default = ["std"]
 dev-context-only-utils = ["dep:arbitrary", "std"]
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
 serde = ["dep:serde", "dep:serde_derive"]
-sha2 = ["dep:solana-hasher", "solana-hasher/sha2"]
+sha2 = ["dep:solana-sha256-hasher", "solana-sha256-hasher/sha2"]
 std = []
 
 [package.metadata.docs.rs]
